src/tests/Loader/classloader/StaticVirtualMethods/NegativeTestCases/UnimplementedAbstractMethodOnConcreteClass.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL">
  <PropertyGroup>
    <OutputType>Exe</OutputType>
  </PropertyGroup>
  <PropertyGroup>
    <DebugType>Full</DebugType>
  </PropertyGroup>
  <ItemGroup>
    <ProjectReference Include="../TypeHierarchy/TypeHierarchyCommonCs.csproj" />
    <Compile Include="$(MSBuildThisFileName).il" />
  </ItemGroup>
</Project>
